Borrando un caracter

--- a/holaweb.html
+++ b/holaweb.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hola Web</title>
+	<title>Hola We</title>
 </head>
 <body >
 	<h1>Hola web</h1>
 	<h5>Realizado por Jose Antonio Yana</h5>
 	<h6>Quinto ciclo</h6>
-	
+
 </body>
 </html>
